syntax = "proto3";

package draws.service.v0;

option go_package = "api/services/draws/v0";

import "api/services/draws/v0/message.proto";

service DrawsService {
	rpc GetDraw(GetDrawRequest) returns (GetDrawResponse) {}
	rpc AddDraw(AddDrawRequest) returns (AddDrawResponse) {}
	rpc ListDraw(ListDrawRequest) returns (ListDrawResponse) {}
}

message GetDrawRequest {
	int64 uuid = 1;
}

message GetDrawResponse {
	draws.message.v0.Draw draw = 1;
}

message AddDrawRequest {
	draws.message.v0.Draw draw = 1;
}

message AddDrawResponse {
	draws.message.v0.Draw draw = 1;
}

message ListDrawRequest {
	int64 pageLimit = 1;
}

message ListDrawResponse {
	repeated draws.message.v0.Draw draws = 1;
}